--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "trailingComma": "none"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "mapbox-gl": "^3.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "mapbox-gl": "^3.7.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
