--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "mapbox-gl": "^3.7.0",
+    "@turf/turf": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
