--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist",
+    "heroku-postbuild": "npm run build"
   },
   "prettier": {
     "printWidth": 100,
@@ -24,7 +26,9 @@
     "@turf/turf": "^7.1.0",
     "mapbox-gl": "^3.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serve": "^14.2.4",
+     "vite": "^5.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -37,7 +41,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "typescript-eslint": "^8.11.0"
   }
 }
