--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@turf/turf": "^7.1.0",
+    "axios": "^1.7.7",
     "mapbox-gl": "^3.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "serve": "^14.2.4",
-     "vite": "^5.4.10"
+    "vite": "^5.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
